--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,15 @@
 {
     "author": "Jonathan DEKHTIAR",
+    "name": "Feedcrunch.IO",
+    "short_name": "Feedcrunch",
+    "description": "Feedcrunch.IO - Chrome Extension",
+    "manifest_version": 2,
+    "version": "1.0.2",
+    "icons": {
+        "16": "img/icon.png",
+        "48": "img/iconLauncher.png",
+        "128": "img/iconStore.png"
+    },
     "background": {
         "scripts": [
             "app/background.js"
@@ -28,20 +38,11 @@
     "web_accessible_resources": [
         "templates/*.html"
     ],
-    "description": "Feedcrunch.IO - Chrome Extension",
-    "icons": {
-        "16": "img/icon.png",
-        "48": "img/iconLauncher.png",
-        "128": "img/iconStore.png"
-    },
-    "manifest_version": 2,
-    "name": "Feedcrunch.IO",
     "permissions": [
         "activeTab",
         "tabs",
         "cookies",
         "storage",
         "*://*/*"
-    ],
-    "version": "1.0.2"
+    ]
 }
