--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "short_name": "Feedcrunch",
     "description": "Feedcrunch.IO - Chrome Extension",
     "manifest_version": 2,
-    "version": "1.0.4",
+    "version": "1.0.5",
     "icons": {
         "16": "img/icon.png",
         "48": "img/iconLauncher.png",
@@ -43,6 +43,7 @@
         "tabs",
         "cookies",
         "storage",
+        "management",
         "*://*/*"
     ]
 }
